<resources>
    <string name="app_name">多彩华容道</string>
    <string name="begin">开始游戏</string>
    <string name="easy">将拥曹营</string>
    <string name="hard">峰回路转</string>
    <string name="medium">横刀立马</string>
    <string name="重玩">重玩</string>
    <string name="开始">开始</string>
    <string name="选关">选关</string>
    <string name="_00_00">00:00</string>

    <string name="横刀立马">横刀立马</string>
    <string name="将拥曹营">将拥曹营</string>
    <string name="峰回路转">峰回路转</string>
    <string name="test1">游戏简介</string>
    <string name="test2">通关战略</string>
    <string name="test3">个人排名</string>
    <string name="title_activity_main6">Main6Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">多彩华容道</string>
    <string name="nav_header_subtitle">一款华容道小游戏</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="article_subtitle">1   博古</string>
    <string name="article_title">华容道简介</string>
    <string name="article_text">华容道是古老的中国民间益智游戏，以其变化多端、百玩不厌的特点与魔方、独立钻石棋一起被国外智力专家并称为“智力游戏界的三个不可思议”。它与七巧板、九连环等中国传统益智玩具还有个代名词叫作“中国的难题”。据《资治通鉴》注释中说“从此道可至华容也”。华容道原是中国古代的一个地名，相传当年曹操曾经败走此地。由于当时的华容道是一片沼泽，所以曹操大军要割草填地，不少士兵更惨被活埋，惨烈非常。
\n\n通过移动各个棋子，帮助曹操从初始位置移到棋盘最下方中部，从出口逃走。不允许跨越棋子，还要设法用最少的步数把曹操移到出口。曹操逃出华容道的最大障碍是关羽，关羽立马华容道，一夫当关，万夫莫开。关羽与曹操当然是解开这一游戏的关键。四个刘备军兵是最灵活的，也最容易对付，如何发挥他们的作用也要充分考虑周全。“华容道”有一个带二十个小方格的棋盘，代表华容道。</string>
    <string name="subheading2">2    通今</string>
    <string name="article_text2">这款游戏基于华容道又不拘泥于华容道，为了添加更多的美感，增强用户的体验，游戏中的图片均是无版权的，同时我采用不同的颜色来代表不同的人物，需要注意的是，即便界面有所区别，但是游戏的本质还是不变的，依旧是帮助2x2的方块“曹操”冲破重重阻碍，到达棋盘的最下方中部的出口。
        \n\n您可以选择任意一个关卡，黑色方格处是无人区；首先点击开始，每次保证只能水平或者竖直移动一个方格，系统会计数您在每一关的所用时间，并保存最佳成绩。
    如果遇到了您尝试多次却无法冲破的阻碍，别担心，我们为您提供了游戏通关攻略，您只需要打开“选关”界面，点击左上角的导航，即可看见这一选项。
    为了增强与用户的交互，我们还提供了背景音乐，游戏中的全部背景音乐均由 Audionautix 网站提供，您可以点击右上角的菜单，选择这一功能，或者随时关闭。
    \n\n最后希望您能通过此游戏，缓解生活工作中的压力，体味孰进孰退的生存哲理，热爱历史遗留的瑰丽宝藏，品读叱咤风云的人物传奇。
    </string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_my_gif_view">MyGifView</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
