<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back5"
    tools:context=".Scrolling">



    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/article_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/article_title"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                tools:text="华容道简介" />

            <TextView
                android:id="@+id/article_subheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:padding="10dp"
                android:text="@string/article_subtitle"
                android:textAlignment="viewStart"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="1    历史" />

            <TextView
                android:id="@+id/article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:lineSpacingExtra="15sp"
                android:padding="20dp"
                android:text="@string/article_text"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/article_subheading2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:padding="10dp"
                android:text="@string/subheading2"
                android:textAlignment="viewStart"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="2    通今" />

            <TextView
                android:id="@+id/article2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:lineSpacingExtra="15sp"
                android:padding="20dp"
                android:text="@string/article_text2"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>